--- a/client/src/components/DashboardNav/DashboardNav.css
+++ b/client/src/components/DashboardNav/DashboardNav.css
@@ -22,6 +22,7 @@
   background-color: orange;
   padding: 3px;
   margin: 3px;
+  text-decoration: none;
 }
 
 .dashboard-nav-container section .active-dash {
